# GM-ExtensionGenerator

./: README.md  gamemaker.extension_core.yymps
.github/workflows/: build-and-release.yml
ExtensionGenerator/: ExtensionGenerator.sln
ExtensionGenerator/codegencore/Extensions/: IrTypeExtensions.cs
ExtensionGenerator/codegencore/Helpers/: ScalarTypes.cs  StringHash.cs
ExtensionGenerator/codegencore/Models/: IIrTypeEnv.cs  IrNamedType.cs  IrType.cs  IrTypeExtensions.cs
ExtensionGenerator/codegencore/Writers/: CodeWriter.cs  DocWriter.cs
ExtensionGenerator/codegencore/Writers/Concrete/: TextCodeWriter.cs
ExtensionGenerator/codegencore/Writers/JSDoc/: IJsDocSpec.cs  JsDocBuilder.cs  JsDocSpec.cs  ParamDoc.cs
ExtensionGenerator/codegencore/Writers/Lang/: CStyleWriter.cs  CppWriter.cs  CxxWriter.cs  GmlWriter.cs  JavaWriter.cs  KotlinWriter.cs  ObjcWriter.cs  SwiftWriter.cs
ExtensionGenerator/extgen/: Program.cs  extgen.csproj
ExtensionGenerator/extgen/App/: CodegenRunner.cs
ExtensionGenerator/extgen/Bridge/: BridgeGeneratorBase.cs  WireHelpersBase.cs
ExtensionGenerator/extgen/Bridge/Java/: JavaBridge.cs  JavaBridgeGenerator.cs
ExtensionGenerator/extgen/Bridge/Kotlin/: KotlinBridge.cs
ExtensionGenerator/extgen/Bridge/Objc/: IAppleBridge.cs  ObjcBridge.cs
ExtensionGenerator/extgen/Bridge/ObjcNative/: ObjcNativeBridge.cs
ExtensionGenerator/extgen/Bridge/Swift/: SwiftBridge.cs
ExtensionGenerator/extgen/Config/: ConfigResolver.cs  ConfigSchemaService.cs  ProjectInitializer.cs
ExtensionGenerator/extgen/Emitters/: GmlEmitter.cs  IIrEmitter.cs
ExtensionGenerator/extgen/Emitters/Android/: AndroidEmitterSettings.cs
ExtensionGenerator/extgen/Emitters/AppleMobile/: IAppleMobileEmitterSettings.cs  IosEmitterSettings.cs  TvosEmitterSettings.cs
ExtensionGenerator/extgen/Emitters/Cmake/: CmakeEmitter.cs  CmakeEmitterContext.cs  CmakeEmitterSettings.cs  CmakeLayout.cs
ExtensionGenerator/extgen/Emitters/Cpp/: CppCommonEmitter.cs  CppEmitter.cs  CppEmitterContext.cs  CppEmitterSettings.cs  CppLayout.cs  CppWireHelpers.cs
ExtensionGenerator/extgen/Emitters/CppInjectors/: CppInjectorsEmitter.cs  CppInjectorsEmitterContext.cs
ExtensionGenerator/extgen/Emitters/Doc/: DocEmitter.cs  DocEmitterSettings.cs  DocLayout.cs
ExtensionGenerator/extgen/Emitters/GMCode/: CPPEmitter.cs  GMCodeAPI.cs  JSEmitter.cs  TSEmitter.cs
ExtensionGenerator/extgen/Emitters/Gml/: GmlEmitter.cs  GmlEmitterContext.cs  GmlEmitterSettings.cs  GmlLayout.cs
ExtensionGenerator/extgen/Emitters/GmlRuntime/: GmlRuntimeEmitter.cs
ExtensionGenerator/extgen/Emitters/Java/: JavaCommonEmitter.cs  JavaEmitter.cs  JavaEmitterContext.cs  JavaLayout.cs  JavaReturnType.cs  JavaWireHelpers.cs
ExtensionGenerator/extgen/Emitters/Jni/: JniEmitter.cs  JniEmitterContext.cs  JniFunctionSpec.cs  JniLayout.cs
ExtensionGenerator/extgen/Emitters/Kotlin/: KotlinEmitter.cs  KotlinEmitterContext.cs  KotlinWireHelpers.cs
ExtensionGenerator/extgen/Emitters/Objc/: ObjcCommonEmitter.cs  ObjcEmitter.cs  ObjcEmitterContext.cs  ObjcLayout.cs
ExtensionGenerator/extgen/Emitters/ObjcNative/: ObjcNativeEmitter.cs
ExtensionGenerator/extgen/Emitters/Swift/: SwiftEmitter.cs  SwiftWireHelpers.cs
ExtensionGenerator/extgen/Emitters/Utils/: DefaultExportTypeMap.cs  ExportTypeUtils.cs  IEmitterContext.cs
ExtensionGenerator/extgen/Emitters/Yy/: YyEmitter.cs  YyEmitterContext.cs  YyEmitterSettings.cs  YyLayout.cs
ExtensionGenerator/extgen/Extensions/: IrCompilationExtensions.cs
ExtensionGenerator/extgen/Mapping/: EmitterSettingsMappers.cs
ExtensionGenerator/extgen/Model/: IrAnalysis.cs  IrCompilation.cs  IrConstant.cs  IrEnum.cs  IrEnumMember.cs  IrField.cs  IrFunction.cs  IrHelpers.cs  IrParameter.cs  IrStruct.cs  IrType.cs  IrTypeKind.cs
ExtensionGenerator/extgen/Models/: IrAnalysis.cs  IrCompilation.cs  IrConstant.cs  IrEnum.cs  IrEnumMember.cs  IrField.cs  IrFunction.cs  IrParameter.cs  IrStruct.cs
ExtensionGenerator/extgen/Models/Config/: ExtGenConfig.cs  GeneratorConfigBase.cs  IGeneratorConfig.cs  RuntimeNaming.cs
ExtensionGenerator/extgen/Models/Utils/: IrFunctionUtil.cs  IrTypeEnumResolver.cs  IrTypeUtil.cs
ExtensionGenerator/extgen/Options/: CmakeEmitterOptions.cs  CodegenConfig.cs  CppEmitterOptions.cs  DocEmitterOptions.cs  GmlEmitterOptions.cs  GmlRuntimeEmitterOptions.cs  IObjcEmitterOptions.cs  JavaEmitterOptions.cs  JniEmitterOptions.cs  RuntimeNaming.cs  YyEmitterOptions.cs
ExtensionGenerator/extgen/Parsing/Gmidl/: GmidlSchemaLoader.cs  GmidlSchemaParser.cs
ExtensionGenerator/extgen/Parsing/Validation/: IrValidator.cs  IrWalkers.cs
ExtensionGenerator/extgen/Planning/: AndroidEmitterFactory.cs  AppleEmitterFactory.cs  EmitterBuilder.cs  ResolvedConfig.cs
ExtensionGenerator/extgen/Resources/Cmake/: CMakeLists.txt  CMakePresets.json
ExtensionGenerator/extgen/Resources/Cmake/cmake/: extgen_integrate_gamemaker_xcode.cmake  extgen_integrate_gamemaker_xcode.rb  extgen_package_xcframework.cmake  extgen_xcframework.cmake
ExtensionGenerator/extgen/Resources/Cmake/cmake/ps4/: extgen_post_build.cmake  extgen_post_project.cmake  extgen_pre_project.cmake
ExtensionGenerator/extgen/Resources/Cmake/cmake/ps5/: extgen_post_build.cmake  extgen_post_project.cmake  extgen_pre_project.cmake
ExtensionGenerator/extgen/Resources/Cmake/cmake/switch/: extgen_pre_project.cmake  extgen_target_setup.cmake
ExtensionGenerator/extgen/Resources/Cmake/cmake/xbox_one/: extgen_post_build.cmake  extgen_post_project.cmake  extgen_pre_project.cmake
ExtensionGenerator/extgen/Resources/Cmake/cmake/xbox_scarlett/: extgen_post_build.cmake  extgen_post_project.cmake  extgen_pre_project.cmake
ExtensionGenerator/extgen/Resources/Cmake/src/: CMakeLists.txt
ExtensionGenerator/extgen/Resources/Cmake/templates/: CMakeUserPresets.json.template
ExtensionGenerator/extgen/Resources/Cpp/: GMExtUtils.cpp  GMExtUtils.h  GMExtWire.h
ExtensionGenerator/extgen/TypeSystem/: IIrTypeMap.cs  IrTypeClassifier.cs
ExtensionGenerator/extgen/Utils/: FileEmitHelpers.cs  PathUtils.cs  ResourceWriter.cs
(+47 files in other folders)
